Satishsfdc5/src/Apttus Quote/Proposal-Configuration Integration/objects/ProposalAdjustmentLineItem__c.object
<CustomObject>
    <description>Represents an adjustment to the price of a product/service</description>
    <fields>
        <fullName>AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the price adjustment should be applied to.</description>
        <label>Adjustment Applies To</label>
        <picklist>
            <picklistValues>
                <fullName>Starting Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the adjustment is modifiable</description>
        <label>Is Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemId__c</fullName>
        <description>ID of the associated proposal line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>The user defined sub type</description>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Proposal Adjustment Line Item</label>
    <nameField>
        <displayFormat>AD-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>